--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -1494,10 +1494,11 @@ The given serialization has to be specified as an RDF vocabulary, which
 % \todonote[author=Christoph Lange,date=D:201109221422+02'00',type=q-aut]{Update on 2014-10-09: Is it OK to have this footnote here?  Or if not, where should it go?  I believe it answers the following question:\\ And what if it doesn't? \eg OWL doesn't specify IRIs for import declarations, so we can, \eg, not annotate them when using the RDF serialization of OWL. We could only do it via RDF reification, or by using an XML serialization.}
 \item There shall be no additional rules (stated in writing in the specification of the serialization, or formalized in its implementation in, e.g., OWL) that forbid properties from foreign vocabulary namespaces to be stated about arbitrary subjects for the purpose of annotation.
 \end{itemize}
-{The OWL RDF serialization, for example, does not satisfy the RDF conformance level, for the following reason. There is an \texttt{owl:imports} property but no class representing imports. 
+
+The serialization of OWL in RDF, for example, does not satisfy the RDF conformance level, for the following reason. There is an \texttt{owl:imports} property but no class representing imports. 
  Therefore, it is not possible to represent a concrete import, of an ontology $O_1$ importing an ontology $O_2$, as a resource, which could have an identifier.  RDF reification would allow for giving the statement $O_1$ \texttt{owl:imports} $O_2$ an identifier. 
  However, the RDF triples resulting from this reification, including, e.g., the triple \texttt{:import\_id rdf:predicate owl:imports},  would not match the head of any rule in the mapping from RDF graphs to the OWL structural specification\footnote{\url{http://www.w3.org/TR/2012/REC-owl2-mapping-to-rdf-20121211/\#Mapping_from_RDF_Graphs_to_the_Structural_Specification}}. 
- They would thus remain left over in the RDF graph that is attempted to be parsed into an OWL ontology, and thus violate the requirement that at the end of this parsing process, the RDF graph must be empty.}  
+ They would thus remain left over in the RDF graph that is attempted to be parsed into an OWL ontology, and thus violate the requirement that at the end of this parsing process, the RDF graph must be empty\footnote{See the last sentence of \url{http://www.w3.org/TR/owl2-mapping-to-rdf/\#Parsing_of_Axioms}}.
 
 
 
@@ -2049,7 +2050,12 @@ original and the renamed OMS.
 
   \termdefinition{reduction}{restriction of an \termref{OMS} to a smaller \termref{signature}.}
 
-\termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in a given smaller \termref{OMS}.}
+\cbs
+\termdefinition{local environment}{OMS built from all previously-declared 
+symbols and axioms}
+\cbe
+
+\termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in \cbs the \termref{local environment}.\cbe}
 
 
 
@@ -2196,10 +2202,35 @@ best possible (in the sense of a maximum set of \termref{logical consequences})
 \termdefinition{closed world assumption}{presumption that what is not known to be true, is false.}
 
 \termdefinitionLight{\termref{minimization}\synonym circumscription\index{circumscription|see {minimization}}}
-{way of implementing the \termref{closed world assumption} by restricting the models\index{model} to those that are minimal.}
+{way of implementing the \termref{closed world assumption} by restricting the \termref{models}\index{model} to those that are minimal (with respect to the local environment).}
+\cbs
+  \begin{note}
+    \termref{Symbols} from the \termref{local environment} are assumed
+    to have a fixed interpretation. Only the symbols newly declared in
+    the minimization are forced to have minimal interpretation.
+  \end{note}
+\cbe
   \begin{note}
     See \cite{circ1}, \cite{circ2}.
   \end{note}
+\cbs
+\termdefinition{maximization}{restriction to \termref{models} to those that are maximal  (with respect to the local environment).}
+\termdefinition{freeness}{restriction to \termref{models} to those that are free (with respect to the local environment).}
+  \begin{note}
+    In first-order-like logics, freeness means minimal interpretation
+    of predicates and minimal equality among data values. Freeness can
+    be used for the specification of inductive datatypes like numbers,
+    lists, trees, bags etc. In order to specify e.g.\ lists over some elements,
+    the specification of the elements should be in the local environment.
+  \end{note}
+\termdefinition{cofreeness}{restriction to \termref{models} to those that are cofree (with respect to the local environment).}
+  \begin{note}
+    In first-order-like logics, cofreeness means maximal
+    interpretation of predicates and equality being observable
+    equivalence. Coreeness can be used for the specification of
+    coinductive datatypes like infinite lists and streams.
+  \end{note}
+\cbe
 
   \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where \termref{non-logical symbol}s are shared according to the \termref{OMS mapping}s in the OMS network.}
 \begin{example}
@@ -2722,7 +2753,7 @@ The following people contributed directly to the development of this specificati
 	\item Oliver Kutz, Free University of Bolzano, Italy
 	\item Christoph Lange, University of Bonn and Fraunhofer IAIS, Germany
 	\item Terry Longstreth, Independent Consultant, USA 	
-        \item Christian Maeder, Jacobs-University Bremen, Germany
+        \item Christian Maeder, Jacobs University Bremen, Germany
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg, Germany  	
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
 	\item Leo Obrst, MITRE, USA
@@ -3989,14 +4020,19 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
 \item a combination of an OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
 \item a minimization of an OMS, forcing the subsequently declared
   non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). Variants are
-maximization, freeness (minimizing also data sets and equalities on these), and cofreeness
-(maximizing also data sets and equalities on these),
-\item the application of a substitution to an OMS.
-
-
+maximization, freeness (minimizing also data sets and equalities on these, \cbs which enables the inductive definition of relations and datatpyes), and cofreeness
+(enabling the coinductive definition of relations and datatpyes).\cbe
+%\item the application of a substitution to an OMS.
 \end{itemize}
 % derived from CASL (see CASL reference manual)
 % and HetCASL (see HetCASL summary)
+
+\cbs
+Some OMS, namely extensions and minimization, maximization, freeness
+and cofreeness, are interpreted relative to a \emph{local enviroment}.
+Rouhgly spekaing, the local environment is the OMS built from all
+previously-declared symbols and axioms.
+\cbe
 
 \includegraphics[scale=0.4]{mof/dia/dia2.png}
 
@@ -6747,9 +6783,14 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 %\end{figure}
 
 This annex specifies the \DOL Ontology, an RDF vocabulary that implements the terms and definitions from \cref{terms-and-defs}.
-Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} stipulated by clause~\ref{c:conformance}.
 The \DOL Ontology is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in \DOL, at \url{https://ontohub.org/meta/dol/ontology}.\footnote{The preferred location for the \DOL Ontology snapshots being part of this OMG standard is \url{http://www.omg.org/spec/DOL/Current/ontology}.}.
 For a full treatment of the background and design considerations of the \DOL Ontology please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
+
+\section{Applications of the \DOL Ontology}\label{a:dol-onto-app}
+
+Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
+
+\section{Classes and Object Properties of the \DOL Ontology}\label{a:dol-onto-tables}
 
 The tables in this annex list the classes and object properties of the \DOL Ontology and thus the essential parts of its implementation.  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise.
 
