--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1495,8 +1495,8 @@ The given serialization has to be specified as an RDF vocabulary, which
 
 The serialization of OWL in RDF, for example, does not satisfy the RDF conformance level, for the following reason. There is an \texttt{owl:imports} property but no class representing imports. 
  Therefore, it is not possible to represent a concrete import, of an ontology $O_1$ importing an ontology $O_2$, as a resource, which could have an identifier.  RDF reification would allow for giving the statement $O_1$ \texttt{owl:imports} $O_2$ an identifier. 
- However, the RDF triples resulting from this reification, including, e.g., the triple \texttt{:import\_id rdf:predicate owl:imports},  would not match the head of any rule in the mapping from RDF graphs to the OWL structural specification\footnote{\url{http://www.w3.org/TR/2012/REC-owl2-mapping-to-rdf-20121211/\#Mapping_from_RDF_Graphs_to_the_Structural_Specification}}. 
- They would thus remain left over in the RDF graph that is attempted to be parsed into an OWL ontology, and thus violate the requirement that at the end of this parsing process, the RDF graph must be empty\footnote{See the last sentence of \url{http://www.w3.org/TR/owl2-mapping-to-rdf/\#Parsing_of_Axioms}}.
+ However, the RDF triples resulting from this reification, including, e.g., the triple \texttt{:import\_id rdf:predicate owl:imports},  would not match the head of any rule in the mapping from RDF graphs to the OWL structural specification\footnote{\nisref{W3C/TR REC-owl2-mapping-to-rdf:2012}, section 3}. 
+ They would thus remain left over in the RDF graph that is attempted to be parsed into an OWL ontology, and thus violate the requirement that at the end of this parsing process, the RDF graph must be empty\footnote{See the last sentence of section 3.2.5 of \nisref{W3C/TR REC-owl2-mapping-to-rdf:2012}}.
 
 
 
@@ -1673,16 +1673,23 @@ be able to expand CURIEs into IRIs when requested.
   %\item{W3C/TR REC-rdf-sparql-query:2008} {SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
   \item{W3C/TR REC-rdf-schema:2014} {RDF Schema 1.1. W3C Recommendation, 25 February 2014.\\ \url{http://www.w3.org/TR/2014/REC-rdf-schema-20140225/}}
   \item{W3C/TR REC-rdf11-mt:2014} {RDF 1.1 Semantics.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/}}
+  \item{W3C/TR REC-owl2-mapping-to-rdf:2012} {OWL 2 Web Ontology Language
+Mapping to RDF Graphs (Second Edition).  W3C Recommendation, 11 December 2012\\ \url{http://www.w3.org/TR/2012/REC-owl2-mapping-to-rdf-20121211/}}
+  \item{DCMI Metadata Terms:2012} {DCMI Metadata Terms, DCMI Recommendation, DCMI Usage Board, 14 July 2012.\\
+     \url{http://dublincore.org/documents/2012/06/14/dcmi-terms/}}
+  \item{W3C/TR REC-skos-reference:2009} {SKOS Simple Knowledge Organization System
+Reference.  W3C Recommendation, 18 August 2009\\ \url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}}
+
+
+
   \item{ODM} {Ontology Definition Metamodel, 2 September 2014. \\ \url{http://www.omg.org/spec/ODM/1.1/}}
 \item{MOF} { Meta Object Facility} \\ \url{http://http://www.omg.org/mof/}
 \item{SMOF} { Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}
-\item{XML} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI//}
+\item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI//}
 %\item{PRR} {Production Rule Representation, December 2009} \\ \url{ http://www.omg.org/spec/PRR/1.0// }
 \item{SBVR} {Semantics Of Business Vocabulary And Rules, November 2013} \\ \url{http://www.omg.org/spec/SBVR/}
 \item{DTV} {Date-Time Vocabulary, August 2013} \\ \url{http://www.omg.org/spec/DTV/1.0/}
 \item{RIF} {Rule Interchange Format, February 2013} \\ \url{http://www.w3.org/TR/rif-overview/}
-\item{SKOS} { Simple Knowledge Organization System} \\ \url{ http://www.w3.org/2004/02/skos/}
-
 \end{enumerate}
 
 
@@ -2876,7 +2883,7 @@ greater expressiveness. However, relegating FOL axioms to  informal annotations 
 are not available for machine processing.  Another example of this problem is the following: For 
 formally representing concept schemes (including taxonomies, thesauri and classification schemes) 
 and provenance information there are the two W3C standards SKOS (Simple Knowledge Organization 
-System) and PROV, as well as \ednote{CL: Did we mean something like “ISO 12345” here, i.e.\ some 
+System; \nisref{W3C/TR REC-skos-reference:2009}) and PROV, as well as \ednote{CL: Did we mean something like “ISO 12345” here, i.e.\ some 
 specific ISO standard that we reference by number? Terry: (re: footnote 29) Probably the family headed by ISO 11179 Information Technology -- Metadata registries (MDR) (http://metadata-stds.org/)
 The 11179 standard is a multipart standard that includes the following parts:·         '          Part 1: Framework
 ·         Part 2: Classification
@@ -6754,10 +6761,25 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 %\end{figure}
 
 This annex specifies the \DOL Ontology, an RDF vocabulary that implements the terms and definitions from \cref{terms-and-defs}.
-The \DOL Ontology is currently maintained as an OWL ontology and, prospectively, as an OMS library implemented in \DOL, at \url{https://ontohub.org/meta/dol/ontology}.\footnote{The preferred location for the \DOL Ontology snapshots being part of this OMG standard is \url{http://www.omg.org/spec/DOL/Current/ontology}.}.
 For a full treatment of the background and design considerations of the \DOL Ontology please see~\cite{LMK:LoLaModularOntologyLogLangTrans12}.
 
-\section{Applications of the \DOL Ontology}\label{a:dol-onto-app}
+\section{Normative State and Normative References}\label{a:dol-onto-norm}
+
+The normative \DOL Ontology snapshots being part of this OMG standard are published at \url{http://www.omg.org/spec/DOL/Current/ontology}.
+The \DOL Ontology is currently implemented in OWL 2 (\nisref{W3C/TR REC-owl2-syntax:2009}).
+The normative snapshots are encoded in RDF/XML using the OWL 2 mapping to RDF graphs (\nisref{W3C/TR REC-owl2-mapping-to-rdf:2012}).
+
+The ontology makes use of the following standard ontologies and vocabularies:
+\begin{itemize}
+\item DCMI Metadata Terms (\nisref{DCMI Metadata Terms:2012})
+\item SKOS (\nisref{W3C/TR REC-skos-reference:2009})
+\end{itemize}
+
+The sources of the \DOL ontology are being maintained in OWL Manchester syntax~\cite{W3C:NOTE-owl2-manchester-syntax-20091027} at \url{https://ontohub.org/meta/dol/ontology}.
+
+It is intended to implement future versions of the \DOL ontology as an OMS library in \DOL.
+
+\section{Intended Applications of the \DOL Ontology}\label{a:dol-onto-app}
 
 Applications of the \DOL Ontology include modeling statements about OMS in RDF, e.g., when annotating OMS, or when describing new conforming logics, OMS languages, serializations, translations, etc., in the \termref{registry} of \DOL-conforming languages and translations detailed below in clause~\ref{a:registry}.
 
@@ -8496,7 +8518,7 @@ mentioned in \aref{a:graph}):
 \item the meta model of schema.org
 \item different diagram types of the UML (Unified Modeling Language), with possibly different logics according to different
 UML semantics
-\item SKOS (Simple Knowledge Organization System )
+\item SKOS (Simple Knowledge Organization System; \nisref{W3C/TR REC-skos-reference:2009})
 \item FOL\textsuperscript{=} (untyped first-order logic, as used for the
 TPTP format)
 \item F-logic
