changed logichub.org into purl.net/DOL

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6922,7 +6922,7 @@ pos=h,
 \cbs  \ednote{This paragraph has merely been moved.}
 It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
 languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for \DOL-conforming languages and translations} hosted
-at \url{http://logichub.org}.  The registry  also includes descriptions of
+at \url{http://purl.net/DOL}.  The registry  also includes descriptions of
 \DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in both human-readable and machine-processable form.  
 
