--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -1278,7 +1278,7 @@ and sentences;
 \item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OMS;
 \item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OMS;
 \item a formal semantics of (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation});
-\item structuring constructs for modeling non-monotonic behaviour; 
+\item structuring constructs for modeling non-monotonic behavior; 
 \item criteria for existing or future OMS languages to conform with \DOL.
 \end{enumerate}
 
@@ -1578,16 +1578,16 @@ A \emph{parser} is \DOL-conformant if it can parse the \DOL textual syntax and p
 \item
 A \emph{printer} is \DOL-conformant if it can read \DOL abstract syntax and produce \DOL textual syntax.
 \item
-{\DOL}-conformant software that is used to \emph{edit, format or manage} \DOL libraries \hasto be capable of reading and writing \DOL abstract syntax. Moreover, it \hasto meet the requirements for a \DOL-conformant parser if it is able to read in \DOL textual input. It \hasto to meet the requirements of a \DOL-conformant printer if it is able to generare \DOL textual output. However, it is also possible that a software for \DOL management will work on the abstract syntax only, and delegates the reading and generation of \DOL text to external parsers and/or printers.
-\item a \emph{static analyser} is \DOL-conformant if it can compute
+{\DOL}-conformant software that is used to \emph{edit, format or manage} \DOL libraries \hasto be capable of reading and writing \DOL abstract syntax. Moreover, it \hasto meet the requirements for a \DOL-conformant parser if it is able to read in \DOL textual input. It \hasto to meet the requirements of a \DOL-conformant printer if it is able to generate \DOL textual output. However, it is also possible that a software for \DOL management will work on the abstract syntax only, and delegates the reading and generation of \DOL text to external parsers and/or printers.
+\item a \emph{static analyzer} is \DOL-conformant if it can compute
   the logic and the signature of an OMS according to the semantics
-  defined in section~\ref{c:semantics}. In more detail, a static analyser
-  can have the following capabilites:
+  defined in section~\ref{c:semantics}. In more detail, a static analyzer
+  can have the following capabilities:
 \begin{itemize}
 \item \emph{simple analysis}: static analysis of \DOL excluding networks and alignments;
 \item \emph{full analysis}: static analysis of full \DOL.
 \end{itemize}
-\item a \emph{transformation tool} is \DOL-conformat if it implements
+\item a \emph{transformation tool} is \DOL-conformant if it implements
 one (or more) language translations, logic translations, language
 projections and/or logic projections.
 \item
@@ -1730,7 +1730,7 @@ For the purposes of this document, the following terms and definitions apply.
 \termdefinition{native OMS}{A
 collection of expressions (like non-logical symbols\index{non-logical symbol}, sentences\index{sentence} and structuring elements) from a given \termref{OMS language}.}
   \begin{example}
-    An UML class diagram, an ontology written in OWL 2 EL, and  a specification written in CASLE are three different native OMS. 
+    An UML class diagram, an ontology written in OWL 2 EL, and  a specification written in CASL are three different native OMS. 
   \end{example}
 	\begin{note}
 	An \termref{OMS} can be written in different \termref{OMS language} 	serializations\index{serialization}.
@@ -2029,7 +2029,7 @@ More precisely, an OMS is flattenable if and only if it is either a basic OMS or
 
 
   \termdefinition{import}{reference to an \termref{OMS}  
-   behaving as if it were verbatimly included; 
+   behaving as if it were verbatim included; 
    also import of \termref{libraries}.}
   \begin{note}
 Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclusion of $O_2$ in place of the import declaration.
@@ -2236,7 +2236,7 @@ best possible (in the sense of a maximum set of \termref{logical consequences})
   \begin{note}
     In first-order-like logics, cofreeness means maximal
     interpretation of predicates and equality being observable
-    equivalence. Coreeness can be used for the specification of
+    equivalence. Cofreeness can be used for the specification of
     coinductive datatypes like infinite lists and streams.
   \end{note}
 \cbe
@@ -3307,7 +3307,7 @@ requirements. Typical questions that arise in this context are, e.g.,
 
 \begin{itemize}
 \item whether the multiplicities in a class diagram are consistent with each other;
-\item wether the attributes and operations in a state machine are
+\item whether the attributes and operations in a state machine are
 available in a class diagram;
 \item	  whether the sequential composition of actions in an interaction diagram is justified by an accompanying OCL specification;
 \item 	whether cooperating state machines comply with pre-/post-conditions and invariants;
@@ -3325,7 +3325,7 @@ sense the diagrams need to be consistent, and check this by suitable tools.
 \cbs The ATM example is about \cbe model-driven development using UML,
 taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
 the design of a traditional automatic teller machine (ATM) connected
-to a bank. For simplicity, \cbs it focusses  only \cbe the handling of entering a
+to a bank. For simplicity, \cbs it focuses  only \cbe the handling of entering a
 card and a PIN with the ATM. After entering the card, one has three
 trials for entering the correct PIN (which is checked by the
 bank). After three unsuccessful trials the card is kept.
@@ -3385,7 +3385,7 @@ implement. In our case, the interface is described in a \emph{class
 OCL constraint \uml{trialsNum >= 3}, which refines its semantics:
 \uml{keepCard} can only be invoked if the OCL constraints holds.
 
-Finally, the dynamic behaviour of the \uml{atm} object is specified by
+Finally, the dynamic behavior of the \uml{atm} object is specified by
 the \emph{behavioral state machine} shown in
 Fig.~\ref{fig:state-machine}. The machine consists of five states
 including \uml{Idle}, \uml{CardEntered}, etc.  Beginning in the
@@ -3490,7 +3490,7 @@ provides a number of syntactic transformations between such languages.
 One example is the OMG Date-Time Vocabulary (DTV). DTV has been formulated in different languages, each of which addresses different audiences:
 \begin{itemize}
 \item	 SBVR: business users
-\item 	UML (class diagrams and OCL): software implementers
+\item 	UML (class diagrams and OCL): software implementors
 \item 	OWL: ontology developers and users
 \item 	Common Logic: (foundational) ontology developers and users
 \end{itemize}
@@ -4029,8 +4029,8 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
 \item a combination of an OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
 \item a minimization of an OMS, forcing the subsequently declared
   non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). Variants are
-maximization, freeness (minimizing also data sets and equalities on these, \cbs which enables the inductive definition of relations and datatpyes), and cofreeness
-(enabling the coinductive definition of relations and datatpyes).\cbe
+maximization, freeness (minimizing also data sets and equalities on these, \cbs which enables the inductive definition of relations and datatypes), and cofreeness
+(enabling the coinductive definition of relations and datatypes).\cbe
 %\item the application of a substitution to an OMS.
 \end{itemize}
 % derived from CASL (see CASL reference manual)
@@ -4038,8 +4038,8 @@ maximization, freeness (minimizing also data sets and equalities on these, \cbs 
 
 \cbs
 Some OMS, namely extensions and minimization, maximization, freeness
-and cofreeness, are interpreted relative to a \emph{local enviroment}.
-Rouhgly spekaing, the local environment is the OMS built from all
+and cofreeness, are interpreted relative to a \emph{local environment}.
+Roughly speaking, the local environment is the OMS built from all
 previously-declared symbols and axioms.
 \cbe
 
@@ -4426,7 +4426,6 @@ OMS              ::= ExtendingOMS
                    | OMS 'then' ExtensionOMS
                    | Qualification* ':' GroupOMS
                    | 'combine' NetworkElements [ExcludeExtensions]
-                   | OMS 'with' SubstName
                    | GroupOMS
 Minimization     ::= MinimizeKeyword CircMin [CircVars]
 MinimizeKeyword  ::= 'minimize'
@@ -4789,7 +4788,7 @@ Hence, the most important need is to capture precisely what a
 heterogeneous logical environment is.
 
 The \DOL semantics itself gives a formal meaning to libraries, OMS
-networks, OMS, and OMS mappings. For each synactic construct
+networks, OMS, and OMS mappings. For each syntactic construct
 in the abstract syntax,
 a \emph{semantic domain} is given. It specifies the range of possible
 values for the semantics. Additionally, \emph{semantic rules} are
@@ -4852,7 +4851,7 @@ can be extended with new non-logical symbols, or some of these symbols can be re
 this is captured using signature morphisms. Moreover, also morphisms
 between models are needed in order to give a semantics to \syntax{minimize},
 \syntax{maximize}, \syntax{free} and \syntax{cofree}---these constructs
-use model morphisms to select certain models, e.g.\ the minimial ones.
+use model morphisms to select certain models, e.g.\ the minimal ones.
 This leads to the notion of \emph{institution}. An institution
 is nothing more than a family of satisfaction systems, indexed by
 signatures, and linked coherently by signature morphisms.
@@ -5850,7 +5849,7 @@ The semantics of $O=$
 \begin{itemize}
   \item $\Inst(O) = \Inst(\syntax{OMS}) = \Inst(\syntax{ExtensionOMS})$ 
   (which means that
-  the instutions of \syntax{OMS} and 
+  the institutions of \syntax{OMS} and 
   \syntax{ExtensionOMS} must be the same)
   \item $\Sig(O) = \Sig(\syntax{OMS}) \cup 
   \Sig((\Inst(\syntax{OMS}), \Sig(\syntax{OMS}, \Mod(\syntax{OMS}), \Th(\syntax{OMS}))),
@@ -6166,7 +6165,7 @@ $$sem(\Gamma, \syntax{OMSRef})= \Gamma(\syntax{OMSRef})$$
 \semdom{sem(\Gamma, \Sigma,\syntax{Symbol}) = s}
 
 $$sem(\Gamma,\Sigma, \syntax{Symbol}) = s$$
-where $s$ is a logic-specific symbol with the name $\syntax{Symbol}$ from $|\Sigma|$.\ednote{Is there some conversion going on here? Then this should be added to the heterogenous logical env.} If such symbol does not exist, 
+where $s$ is a logic-specific symbol with the name $\syntax{Symbol}$ from $|\Sigma|$.\ednote{Is there some conversion going on here? Then this should be added to the heterogeneous logical env.} If such symbol does not exist, 
 the semantics is undefined.
 
 \semdom{sem(\Gamma, \Sigma_1,\Sigma_2,\syntax{SymbolMap})}
@@ -6567,7 +6566,7 @@ class of models obtained by projecting each family of models
 compatible with $G_2$ to the component $i$.
 Then $G$ extends the union of $G_1$ and $G_2$ for each 
 pair of nodes $(i_1, i_2)$,
-where $i_1$ and $i_2$ identify the occurences of the same node $i$
+where $i_1$ and $i_2$ identify the occurrences of the same node $i$
 in $G_1$ and $G_2$ respectively,
 with a theorem link 
 from $i_1$ to $i_2$ labeled with the identity
@@ -6594,12 +6593,12 @@ $N_1 \stackrel{\iota_1}{\rightarrow} N_3 \stackrel{\iota_2}{\leftarrow}
 N_3$ where
 \begin{enumerate}
 \item
-$N_1$ is labelled with $(\Name(O_1), \Inst(O_1), \Sig(O_1),\Mod(O_1), \Th(O_1))$,
+$N_1$ is labeled with $(\Name(O_1), \Inst(O_1), \Sig(O_1),\Mod(O_1), \Th(O_1))$,
 \item
-$N_2$ is labelled with $(\Name(O_2), \Inst(O_2),\Sig(O_2), \Mod(O_2), \Th(O_2))$
+$N_2$ is labeled with $(\Name(O_2), \Inst(O_2),\Sig(O_2), \Mod(O_2), \Th(O_2))$
 and \
 \item
-$N_3$ is labelled with 
+$N_3$ is labeled with 
 $(\Name(O_3), \cI, \Sigma, \cM, \Delta)$
 \end{enumerate}
 \end{enumerate}
@@ -6684,7 +6683,7 @@ $$sem(\Gamma, L_1,\syntax{AlignSem})=\begin{cases}
                                    relativize_{logic(\Gamma.current)}(L_1)& \mbox{otherwise}
                                                                                                                    \end{cases}$$
                                                                                                                    
-                                                                                                                   \noindent where the relativisation procedure is
+                                                                                                                   \noindent where the relativization procedure is
                                                                                                                    logic-specific.                                                                                                
                                                                                                                   
 
@@ -6916,7 +6915,7 @@ pos=h,
 \cbs  \ednote{This paragraph has merely been moved.}
 It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
 languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for \DOL-conforming languages and translations} hosted
-at \url{http://logichub.org}.  The registry  also includes descriptions of
+at \url{http://purl.net/DOL}.  The registry  also includes descriptions of
 \DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in both human-readable and machine-processable form.  
 
@@ -6990,7 +6989,7 @@ Note that \ELDL does not have disjunction or negation, and is therefore a sub-Bo
 Remark: strictly speaking, the institution defined above is
 \emph{{OWL} 2 DL without restrictions} in the sense of
 \cite{DBLP:conf/owled/SchneiderRS13}. The reason is that in an
-institution, the sentences can be used for arbitary formation of
+institution, the sentences can be used for arbitrary formation of
 theories. This is related to the presence of \DOL's union operator on
 OMS.  OWL 2 DL's specific restrictions on theory formation can be
 modeled \emph{inside} this institution, as a constraint on OMS.  This
@@ -7464,7 +7463,7 @@ C$;
 %  The set of constants are \uml{EnumerationLiteral}s.  These could be
 %  added like \uml{Property}.}
 and the partial ordering relation $\leq_C$ represents a
-\emph{generalisation relation} on $C$, where $c_1$ is a
+\emph{generalization relation} on $C$, where $c_1$ is a
 \emph{sub-class/data type} of $c_2$ if $c_1 \leq_C c_2$.
 
 A \emph{class/data type hierarchy map}
@@ -7532,7 +7531,7 @@ $\mathbf{a}.p_i : \tau_i[c_i]$ for $1 \leq i \leq r$.  An association
 declaration is \emph{binary} if $r = 2$.\footnote{Only binary
   association may show member ends that are properties not owned by the
   association (UML Superstructure Specification 2.4.1, p.~37; UML 2.5,
-  p.~228).  The propery declarations induced by a more than binary
+  p.~228).  The property declarations induced by a more than binary
   association result in a query operation.}
 
   \item A \emph{composition declaration} over $(C, {\leq_C})$ is of the
@@ -7559,7 +7558,7 @@ $\mathbf{m}.p_1 : \mathsf{Set}[c_1]$ and $\mathbf{m}.p_2 : \tau_2[c_2]$.
   associations (UML Superstructure Specification 2.4.1, p.~37; UML 2.5,
   p.~228) and their multiplicity must not exceed one (UML Superstructure
   Specification 2.4.1, p.~126; UML 2.5, p.~155).\cbs  Thus, 
-  composition declarations are  distinguhished from\cbe general association declarations.}
+  composition declarations are  distinguished from\cbe general association declarations.}
 
 
 \medskip\noindent\textbf{Class/data type nets (Signatures).}
@@ -7571,9 +7570,9 @@ $(C, {\leq_C})$, and a set $M$ of composition declarations over $(C, {\leq_C})$,
 the following properties are satisfied:
 %
 \begin{itemize}[label={--}, leftmargin=*]
-  \item attribute names are unique along the generalisation relation: if
+  \item attribute names are unique along the generalization relation: if
 $c_1.p_1 : \tau_1[c_1']$ and $c_2.p_2 : \tau_2[c_2']$ are different
-property declararations in $P$ and $c_1 \leq_C c_2$, then $p_1 \neq
+property declarations in $P$ and $c_1 \leq_C c_2$, then $p_1 \neq
 p_2$;
 
   \item association and composition names are unique: if $d_1$ and
@@ -7602,7 +7601,7 @@ $\mathbf{a} = a(p_1 : \tau_1[c_1], p_2 : \tau_2[c_2])$ is \emph{owned
   by} $c_0 \in C$\cbs{},\cbe if $c_{3-i} \leq_C c_0$ and there is an attribute
 declaration $c_0.p_i : \tau_i[c_i] \in P$; and similarly for property
 declarations yielded by composition declarations.  (Note that by the
-uniqueness of attribute names along the generalisation hierarchy only a
+uniqueness of attribute names along the generalization hierarchy only a
 single attribute with name $p_i$ may exist.)
 \end{itemize}
 
@@ -7652,7 +7651,7 @@ $\mathrm{Cl}$.
 \\[-.5ex]
   \phantom{\text{Classes/data types: }}\mathsf{Boolean}, \mathsf{UnlimitedNatural}, \mathsf{Integer}, \mathsf{Real}, \mathsf{String}
 \\
-  \text{Generalisations: }\mathsf{Point} \leq \mathsf{Unit}, \mathsf{Linear} \leq \mathsf{Unit}
+  \text{Generalizations: }\mathsf{Point} \leq \mathsf{Unit}, \mathsf{Linear} \leq \mathsf{Unit}
 \\
   \text{Properties: }\mathsf{Line.linear : Set[Boolean]}, \mathsf{Track.linear : Set[Boolean]},
 \\[-.5ex]
@@ -7901,7 +7900,7 @@ the following grammar:
                &   | & \mathit{FunExpr}\ \mathsf{\leq}\ \mathit{NumLiteral}
 \\[1ex]
   \mathit{FunExpr} & ::= & \mathit{\#}\ \mathit{Attribute}\\
-                   &   | & \mathit{\#}\ \mathit{Assocation}\ \mathsf{.}\ \mathit{End}\\
+                   &   | & \mathit{\#}\ \mathit{Association}\ \mathsf{.}\ \mathit{End}\\
                    &   | & \mathit{\#}\ \mathit{Composition}\ \mathsf{.}\ \mathit{End}
 \\
                    &   | & \mathit{\#}\ \mathit{Operation}\ \mathsf{.}\ \mathit{Param}
@@ -8543,7 +8542,7 @@ to be developed. For the syntax aspects of these translations, QVT
 could be a useful option. However, it would have added value to choose
 a representation of translations that allows the their correctness
 to be proven easily. Such a representation would have to interact
-with suitable representations of languages and loigcs in a 
+with suitable representations of languages and logics in a 
 logical framework. See \cite{CodescuEtAl2011d} for some work
 in this direction.
 \cbe
@@ -8675,7 +8674,6 @@ OMS                ::= ExtendingOMS
                      | extension OMS ExtensionOMS
                      | qual-oms Qualification* OMS
                      | combination Network
-                     | application OMS SubstName
 Minimization       ::= MinType CircMin CircVars
 MinType            ::= minimize | maximize | free | cofree
 CircMin            ::= Symbol Symbol*
@@ -8908,6 +8906,8 @@ SubstDefn      ::= 'substitution' SubstName ':' GroupOMS 'to'
 ResultDefn     ::= 'result' ResultName '=' SubstName
                    ( ',' SubstName )* 'for' QueryName ['%complete']
                    'end'
+OMS            ::= ($...$)
+                       | OMS , 'with' , SubstName 
 QueryName      ::= IRI
 SubstName      ::= IRI
 ResultName     ::= IRI
@@ -8926,6 +8926,8 @@ QueryDefn      ::= select-query-defn QueryName Vars Sentence
 SubstDefn      ::= subst-defn SubstName OMS OMS SymbolMap
 ResultDefn     ::= result-def ResultName SubstName SubstName*
                               QueryName [Complete]
+OMS            ::= ($...$)
+                     | 'application', OMS, SubstName 
 QueryName      ::= IRI
 SubstName      ::= IRI
 ResultName     ::= IRI
@@ -10194,7 +10196,7 @@ a specific version of a files using the \emph{Commit}, \emph{Branch} and
     \end{itemize}
 \end{itemize}
 
-\section{Disambiguating}
+\section{Disambiguation}
 
 If the \url{path/to/an-OMS} can actually also be a path to a directory  --
 which would be possible if there were a directory named \textbf{pizza} and an
