--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -1413,7 +1413,7 @@ the abstract syntaxes (it \may also provide mappings between concrete
 syntaxes). 
 A language translation  from language $L_1$ (based on institution
 $I_1$) to language $L_2$ (based on institution $I_2$) is conforming
-with \DOL if it is based on a logic translation such the following
+with \DOL if it is based on a logic translation such\cbs that\cbe the following
 diagram commutes (i.e.\ following both possible paths from 
 $L_1$ to $I_2$ leads to the same result):
 $$\xymatrix{
@@ -1429,7 +1429,7 @@ this case, they \shall preserve the semantics of the structuring
 language aspect.  Furthermore, language translations \should preserve
 comments and annotations.  All comments attached to a sentence (or
 symbol) in the source \should be attached to its translation in the
-target (if there are more than one sentences (resp.\ symbols)
+target (if there\cbs is\cbe more than one sentences (resp.\ symbols)
 expressing the translation, to at least one of them).
 
 \sclause{Conformance of a Serialization of an OMS Language With \DOL}\label{c:conform:serialization}
@@ -1443,7 +1443,7 @@ language.  To achieve this without breaking the formal semantics of that OMS lan
  \cbs \DOL utilizes \cbe the \termref{annotation} or commenting features that the OMS language supports, 
  in order to place such
 identifiers inside annotations/ comments.  
-Depending on the nature of the concrete given
+Depending on the nature of\cbs a given concrete\cbe
 serialization of the OMS language (be it plain text, some serialization of RDF, XML, or some other 
 structured text format), one can be more specific about what the annotation/commenting facilities of
 that serialization must look like in order to support this identifier injection.  
